<resources>
    <string name="app_name">triathlon app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Course TRIATHLON APP </string>
    <string name="nav_header_subtitle"> ENSI </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Homme</string>
    <string name="tab_text_2">Femme</string>
    <string name="age1">10-14</string>
    <string name="age2">15-19</string>
    <string name="age3">20-30</string>
    <string name="arrive">Arrivé</string>
    <string name="natation">Natation</string>
    <string name="velo">Vélo</string>
    <string name="course">Course à pied</string>


    <string name="inscrp">Inscription</string>
    <string name="Login">Login Admin</string>
    <string name="menu_result">Résultat</string>
    <string name="menu_stati">Statistique </string>
    <string name="menu_admin">Administrateur</string>
    <string name="menu_home">Accueil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tous">tous</string>
    <string name="stath">Hommes</string>
    <string name="statf">Femmes</string>

</resources>