<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.triathlonapp.fragmentMenu.Fragment_home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_result"
        android:name="com.example.triathlonapp.fragmentMenu.Fragment_result"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/nav_stati"
        android:name="com.example.triathlonapp.fragmentMenu.Fragment_stat"
        android:label="@string/menu_stati"
        tools:layout="@layout/fragment_stat" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.triathlonapp.fragmentMenu.Fragment_admin"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>