<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentMenu.Fragment_result">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabBarFA2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="#EF5858"
            app:tabSelectedTextColor="#883131"
            app:tabTextColor="#77ED3F3F">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ArriveFA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrive" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/NatationFA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/natation" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/VeloFA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velo" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/CourseFA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course" />


        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager.widget.ViewPager

            android:id="@+id/viewpagescoreFA2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabBarFA2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>