<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAdmin">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="420dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ID" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/arrive" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/natation" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/velo" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/course" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/IDA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="ID"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/AdAr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/arrive"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/natAd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/natation"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/velAd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/velo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/courAD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/course"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_adm"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="Ajouter"
            android:textColor="#F3EEEE" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="172dp"
        android:layout_height="37dp"
        android:text="resultat par secondes :"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conv"
        app:layout_constraintVertical_bias="0.191" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="222dp"
        android:layout_height="52dp"
        android:layout_marginBottom="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.557">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="20"
            android:text="temp" />

        <EditText
            android:id="@+id/hh"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="12"
            android:hint="Heure"
            android:inputType="number" />

        <EditText
            android:id="@+id/mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="minutes"
            android:inputType="number" />

        <EditText
            android:id="@+id/ss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Secondes"
            android:inputType="number" />


    </LinearLayout>

    <TextView
        android:id="@+id/resu"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:text="---"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/conv"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/conv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="Convertir"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="396dp"
        android:layout_height="65dp"

        android:text="Veuillez entrer les résultats en seconde \n Vous pouvez utilisez le convertisseur ci-dessous"
        android:textSize="40px"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

</androidx.constraintlayout.widget.ConstraintLayout>